fixed unused ids

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <img src="images/CSS.png" alt="CSS logo">
                             <img src="images/bootstrap.png" alt="bootstrap logo">
                         </div>
-                        <button id="button1">La Mode</button>
+                        <button>La Mode</button>
                     </div>
                     <div class="work">
                         <h3>Family Contacts</h3>
@@ -55,7 +55,7 @@
                             <img src="images/CSS.png" alt="CSS logo">
                             <img src="images/socket.png" alt="socket logo">
                         </div>
-                        <button id="button2">Family Contacts</button>
+                        <button>Family Contacts</button>
                     </div>
                     <div class="work">
                         <h3>fiveEleven</h3>
@@ -73,7 +73,7 @@
                             <img src="images/JavaScript.png" alt="JavaScript logo">
                             <img src="images/materialize.png" alt="materialize logo">
                         </div>
-                        <button id="button3">fiveEleven</button>
+                        <button>fiveEleven</button>
                     </div>
                 </div>   
             </div>
